force-app/main/default/objects/FNA_Activity__c/FNA_Activity__c.object-meta.xml
<CustomObject>
    <label>FNA Activity</label>
    <nameField>
        <displayFormat>FNA-{0000000000}</displayFormat>
        <label>FNA Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FNA Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>