force-app/main/default/objects/FNA_Activity__c/fields/Avatar_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Downloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avatar Downloaded</label>
    <type>Checkbox</type>
</CustomField>