force-app/main/default/objects/FNA_Activity__c/fields/Avatar_Master__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avatar Master</label>
    <referenceTo>Avatar_Master__c</referenceTo>
    <relationshipLabel>FNA Activitys</relationshipLabel>
    <relationshipName>Questionnaire_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>