force-app/main/default/objects/FNA_Activity__c/fields/Avatar_Name__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Name__c</fullName>
    <formula>Avatar_Master__r.Avatar_TH__c</formula>
    <label>Avatar Name</label>
    <type>Text</type>
</CustomField>