force-app/main/default/objects/FNA_Activity__c/fields/Avatar_Url__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Avatar Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>