force-app/main/default/objects/FNA_Activity__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>