force-app/main/default/objects/FNA_Activity__c/fields/Created_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Created_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>รหัสสาขาที่สร้าง FNA Activity</inlineHelpText>
    <label>Created Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>