force-app/main/default/objects/FNA_Activity__c/fields/Drop_Off_Page__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop Off Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>