force-app/main/default/objects/FNA_Activity__c/fields/Expire_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Expire_DateTime__c</fullName>
    <formula>SMS_OTP__r.Expire_DateTime__c +  (7/24)</formula>
    <label>SMS OTP Exp</label>
    <type>DateTime</type>
</CustomField>