force-app/main/default/objects/FNA_Activity__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF((TODAY() - DATEVALUE(CreatedDate)) &gt; 90, true, false)</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>