force-app/main/default/objects/FNA_Activity__c/fields/Have_Referral__c.field-meta.xml
<CustomField>
    <fullName>Have_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Referral</label>
    <type>Checkbox</type>
</CustomField>