force-app/main/default/objects/FNA_Activity__c/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <formula>SMS_OTP__r.OTP_Code__c</formula>
    <label>SMS OTP Code</label>
    <type>Text</type>
</CustomField>