force-app/main/default/objects/FNA_Activity__c/fields/Otp_Ref__c.field-meta.xml
<CustomField>
    <fullName>Otp_Ref__c</fullName>
    <formula>SMS_OTP__r.Otp_Ref__c</formula>
    <label>SMS OTP Ref</label>
    <type>Text</type>
</CustomField>