force-app/main/default/objects/FNA_Activity__c/fields/Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>