force-app/main/default/objects/FNA_Activity__c/fields/Product_Holding__c.field-meta.xml
<CustomField>
    <fullName>Product_Holding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Holding</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>