force-app/main/default/objects/FNA_Activity__c/fields/Product_Interested__c.field-meta.xml
<CustomField>
    <fullName>Product_Interested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Interested</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>