force-app/main/default/objects/FNA_Activity__c/fields/Questionnaire_Flow__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Flow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Questionnaire Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>