force-app/main/default/objects/FNA_Activity__c/fields/Send_SMS_Details__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Send SMS Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>