force-app/main/default/objects/FNA_Activity__c/fields/SMS_OTP__c.field-meta.xml
<CustomField>
    <fullName>SMS_OTP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>use for send SMS</description>
    <label>SMS_OTP</label>
    <referenceTo>OTP__c</referenceTo>
    <relationshipLabel>FNA Activitys</relationshipLabel>
    <relationshipName>FNA_Activitys</relationshipName>
    <type>Lookup</type>
</CustomField>