force-app/main/default/objects/FNA_Activity__c/fields/SMS_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sponsor__c</fullName>
    <formula>&apos;FNA&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS_Sponsor</label>
    <type>Text</type>
</CustomField>