force-app/main/default/objects/FNA_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Person_Name__c</columns>
    <columns>Avatar_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Have_Referral__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>